--- a/analysis/realdata_final_genefunctions.Rmd
+++ b/analysis/realdata_final_genefunctions.Rmd
@@ -161,6 +161,140 @@ WBP1L Not currently known to be involved in lipid metabolism or LDL levels.
 </figure>
 
 
+# IBD-ebi-a-GCST004131
+
+## New genes identified by multi-group
+
+HLA-DQB1, BRD7, PTPN2, FOSL2, ERI3, CD244, ADAM15, TNFRSF6B, IP6K2, FCGR2A, SBNO2, GPR35, SMAD3, MAST2, ACBD3, STAT3, CASC3, RORC, RGS14, ATG16L1, AUH
+
+**Genes with Evidence of Association with IBD **
+
+HLA-DQB1 – Involved in antigen presentation via MHC class II; variants strongly associated with IBD due to dysregulated immune recognition of gut antigens.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/HLA-DQB1.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/HLA-DQB1.png" width="150%">
+</figure>
+
+
+PTPN2 – Negatively regulates pro-inflammatory JAK/STAT signaling; loss-of-function variants increase intestinal inflammation and are linked to Crohn’s disease and ulcerative colitis.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/PTPN2.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/PTPN2.png" width="150%">
+</figure>
+
+
+CD244 – Modulates NK and T cell cytotoxic responses; may contribute to abnormal immune cell activation and mucosal inflammation in IBD.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/CD244.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/CD244.png" width="150%">
+</figure>
+
+
+ADAM15 – Promotes leukocyte transmigration and epithelial barrier remodeling; upregulated in inflamed IBD tissues.
+
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/ADAM15.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/ADAM15.png" width="150%">
+</figure>
+
+
+TNFRSF6B – A decoy receptor blocking FasL-induced apoptosis; implicated in disrupted immune homeostasis and epithelial cell survival in IBD.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/TNFRSF6B.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/TNFRSF6B.png" width="150%">
+</figure>
+
+
+FCGR2A – Mediates phagocytosis and clearance of immune complexes; genetic variants are associated with dysregulated innate immune responses in IBD.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/FCGR2A.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/FCGR2A.png" width="150%">
+</figure>
+
+
+
+GPR35 – G protein-coupled receptor expressed in intestinal immune cells; risk allele linked to reduced epithelial repair and altered immune cell migration in IBD.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/GPR35.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/GPR35.png" width="150%">
+</figure>
+
+
+
+
+SMAD3 – Mediates TGF-β signaling involved in immune tolerance and epithelial regeneration; implicated in intestinal fibrosis and chronic inflammation in IBD.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/SMAD3.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/SMAD3.png" width="150%">
+</figure>
+
+
+
+STAT3 – Transduces IL-6 and IL-23 signals; critical for Th17 cell differentiation and intestinal barrier function. Hyperactivation promotes chronic intestinal inflammation.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/STAT3.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/STAT3.png" width="150%">
+</figure>
+
+
+RORC – Encodes RORγt, the master regulator of Th17 cells; promotes IL-17-mediated mucosal inflammation in IBD.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/RORC.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/RORC.png" width="150%">
+</figure>
+
+
+ATG16L1 – Essential for autophagy in intestinal epithelial cells and Paneth cells; risk variants impair bacterial clearance and epithelial homeostasis in Crohn’s disease.
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz/IBD-ebi-a-GCST004131/multi/ATG16L1.png" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/figures/lz_ld/IBD-ebi-a-GCST004131/multi/ATG16L1.png" width="150%">
+</figure>
+
+
 
 # SBP-ukb-a-360
 
