--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -68,16 +68,16 @@ region merge with mapping table
 
 * [Summary for parameters, number of genes in single/multigroup analysis, heatmap for new genes -- regionmerge](realdata_final_multigroup_summary_3qtls_rmmapping.html)
 * [Diagnosis](realdata_final_multigroup_examine_results_3qtls_rmmapping.html)
-
 * [Comparing region merge settings: with mapping table / without mapping table](realdata_final_compare_new_regionmerge.html)
-
-* [Gene functions](realdata_final_genefunctions.html)
 
 Validation
 
+* [Gene functions](realdata_final_genefunctions.html)
 * [Overlap with silver standard genes](realdata_final_multigroup_validation_silver_3qtls.html)
 * [Weighted pathway-based gene set enrichment](realdata_final_multigroup_validation_weighted_pwy_3qtls.html)
 * [Enrichment analysis using chatgpt](realdata_final_downstream_enrichment_chatgpt.html)
+* [Enrichment -- comparing coloc, twas and ctwas results](realdata_final_downstream_enrichment_compare_twasctwascoloc.html)
+
 
 ## Real data final round 05/14/2025 , e + s + st + ed QTLs
 
