--- a/analysis/realdata_final_downstream_enrichment_compare_twasctwascoloc.Rmd
+++ b/analysis/realdata_final_downstream_enrichment_compare_twasctwascoloc.Rmd
@@ -27,8 +27,13 @@ DT::datatable(matrix())
 
 library(VennDiagram)
 
-traits <- c("LDL-ukb-d-30780_irnt","IBD-ebi-a-GCST004131","T1D-GCST90014023","aFib-ebi-a-GCST006414","SBP-ukb-a-360","BMI-panukb","HB-panukb","Height-panukb")
-# 
+trait_nopsy <- c("LDL-ukb-d-30780_irnt","IBD-ebi-a-GCST004131","aFib-ebi-a-GCST006414","SBP-ukb-a-360",
+                 "T1D-GCST90014023","T2D-panukb","BMI-panukb","HB-panukb",
+                 "Height-panukb","HTN-panukb","PLT-panukb","RBC-panukb",
+                 "WBC-ieu-b-30"
+                 )
+trait_psy <- c("SCZ-ieu-b-5102","BIP-ieu-b-5110","PD-ieu-b-7","NS-ukb-a-230")
+traits <- c(trait_nopsy,trait_psy)
 
 folder_results <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/results_downstream/enrichr_compare/"
 ctwas_folder_results <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/"
