--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -69,6 +69,8 @@ region merge with mapping table
 * [Summary for parameters, number of genes in single/multigroup analysis, heatmap for new genes -- regionmerge](realdata_final_multigroup_summary_3qtls_rmmapping.html)
 * [Diagnosis](realdata_final_multigroup_examine_results_3qtls_rmmapping.html)
 * [Comparing region merge settings: with mapping table / without mapping table](realdata_final_compare_new_regionmerge.html)
+* [Comparing with TGFM results](realdata_final_compare_with_tgfm_rmmapping.html)
+
 
 Validation
 
