--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -32,6 +32,9 @@ editor_options:
 # cTWAS epigenetics results
   * [cTWAS epigenetic analysis](ctwas_epigenetic_analysis.html)
 
+# cTWAS pops results
+  * [cTWAS pops analysis](ctwas_pops_analysis.html)
+  
 # Simulation results
   * [Simulation five uncorrelated tissues three omics results](simulation_five_uncorrelated_tissues_three_omics.html)
   * [Simulation five correlated brain tissues three omics results](simulation_five_correlated_brain_tissues_three_omics.html)
