--- a/analysis/ctwas_pops_analysis.Rmd
+++ b/analysis/ctwas_pops_analysis.Rmd
@@ -62,7 +62,7 @@ plot_pops_by_pip_bin <- function(df,trait_name) {
 ```
 
 ### POPS score across all traits
-```{r echo=FALSE, message=FALSE, warning=FALSE, include=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 plot_df <- data.frame()
 for(i in traits){
   pops <- fread(paste0("/project/xinhe/shengqian/pops/pops_UKB_output1/",i,"_pops/",i,".preds"))
@@ -80,7 +80,7 @@ plot_pops_by_pip_bin(plot_df,"Across all traits")
 ```
 
 ### POPS score of individual trait
-```{r echo=FALSE, message=FALSE, warning=FALSE, include=FALSE}
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 for(i in traits){
   pops <- fread(paste0("/project/xinhe/shengqian/pops/pops_UKB_output1/",i,"_pops/",i,".preds"))
   pop_anno <- fread("/project/xinhe/shengqian/pops/example/data/utils/gene_annot_jun10.txt")
